# wordpress-rs

./: .gitignore  .swiftlint.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.swift  Gemfile  Makefile  Package.resolved  Package.swift  README.md  WordPressAPI.podspec  api.sh  create-plugin-response.json  create-plugin.sh  docker-compose.yml  fetch-plugin-result.json  fetch-plugin.sh  fetch_plugins.sh  generated_posts_endpoint.rs  update-plugin.sh  wordpress.Dockerfile
jetpack_api/: Cargo.toml  uniffi.toml  wp_derived_request.toml
jetpack_api/src/: api_error.rs  jetpack_client.rs  jetpack_connection.rs  lib.rs  request.rs
jetpack_api_integration_tests/: Cargo.toml
jetpack_api_integration_tests/src/: lib.rs
jetpack_api_integration_tests/tests/: test_jetpack_connection_immut.rs
wordpress_api_request/: Cargo.toml  build.rs
wordpress_api_request/src/: lib.rs  wordpress_api_request.udl
wp_api/: Cargo.toml  build.rs  uniffi.toml  wp_derived_request.toml
wp_api/src/: api_client.rs  api_error.rs  application_passwords.rs  authenticator.rs  date.rs  endpoint.rs  lib.rs  login.rs  pages.rs  paginator.rs  parsed_url.rs  parser.rs  plugins.rs  post_types.rs  posts.rs  request.rs  serde_helper.rs  site_settings.rs  unit_test_common.rs  url.rs  url_query.rs  users.rs  uuid.rs  wp_api.udl  wp_site_health_tests.rs
wp_api/tests/: integration_test_common.rs  reusable_test_cases.rs  test_application_passwords_err.rs  test_application_passwords_immut.rs  test_application_passwords_mut.rs  test_login_immut.rs  test_manual_request_builder_immut.rs  test_plugins_err.rs  test_plugins_immut.rs  test_plugins_mut.rs  test_post_types_immut.rs  test_users_err.rs  test_users_immut.rs  test_users_mut.rs  test_wp_site_health_tests_immut.rs
wp_api_integration_tests/: Cargo.toml  build.rs
wp_api_integration_tests/src/: backend.rs  fs_utils.rs  lib.rs  main.rs  wp_cli.rs  wp_db.rs
wp_api_integration_tests/tests/: test_application_passwords_err.rs  test_application_passwords_immut.rs  test_application_passwords_mut.rs  test_cookie_authentication.rs  test_cookie_authentication_immut.rs  test_jetpack_connection_immut.rs  test_login_immut.rs  test_manual_request_builder_immut.rs  test_plugins_err.rs  test_plugins_immut.rs  test_plugins_mut.rs  test_post_types_err.rs  test_post_types_immut.rs  test_posts_err.rs  test_posts_immut.rs  test_posts_mut.rs  test_site_settings_immut.rs  test_site_settings_mut.rs  test_users_err.rs  test_users_immut.rs  test_users_mut.rs  test_wp_site_health_tests_immut.rs  wp_db.rs
wp_api_integration_tests_backend/: Cargo.toml
wp_api_integration_tests_backend/src/: main.rs
wp_contextual/: Cargo.toml
wp_contextual/src/: lib.rs  main.rs  wp_contextual.rs
wp_contextual/tests/: all_tests.rs  basic_wp_contextual.rs  basic_wp_contextual_field.rs  basic_wp_contextual_option.rs  error_both_wp_contextual_field_and_wp_contextual_option.rs  error_both_wp_contextual_field_and_wp_contextual_option.stderr  error_empty_result.rs  error_empty_result.stderr  error_missing_sparse_prefix_from_wp_contextual.rs  error_missing_sparse_prefix_from_wp_contextual.stderr  error_missing_sparse_prefix_from_wp_contextual_field.rs  error_missing_sparse_prefix_from_wp_contextual_field.stderr  error_unexpected_wp_context_ident.rs  error_unexpected_wp_context_ident.stderr  error_unexpected_wp_context_literal.rs  error_unexpected_wp_context_literal.stderr  error_unexpected_wp_context_meta_variant_name_value.rs  error_unexpected_wp_context_meta_variant_name_value.stderr  error_unexpected_wp_context_meta_variant_path.rs  error_unexpected_wp_context_meta_variant_path.stderr  error_unexpected_wp_context_punct.rs  error_unexpected_wp_context_punct.stderr  error_unexpected_wp_context_token.rs  error_unexpected_wp_context_token.stderr  error_wp_contextual_field_without_wp_context.rs  error_wp_contextual_field_without_wp_context.stderr  error_wp_contextual_not_a_struct.rs  error_wp_contextual_not_a_struct.stderr  error_wp_contextual_option_without_wp_context.rs  error_wp_contextual_option_without_wp_context.stderr  wp_contextual_field_with_inner_type.rs  wp_contextual_field_with_multiple_path_segments.rs  wp_contextual_field_with_multiple_path_segments_helper.rs  wp_contextual_field_with_multiple_segments.rs
wp_derive/: Cargo.toml
wp_derive/src/: lib.rs  main.rs  wp_contextual.rs
wp_derive/tests/: 01-parse.rs  all_tests.rs  basic_wp_contextual.rs  basic_wp_contextual_field.rs  error_empty_result.rs  error_empty_result.stderr  error_missing_sparse_prefix_from_wp_contextual.rs  error_missing_sparse_prefix_from_wp_contextual.stderr  error_missing_sparse_prefix_from_wp_contextual_field.rs  error_missing_sparse_prefix_from_wp_contextual_field.stderr  error_unexpected_wp_context_ident.rs  error_unexpected_wp_context_ident.stderr  error_unexpected_wp_context_literal.rs  error_unexpected_wp_context_literal.stderr  error_unexpected_wp_context_meta_variant_name_value.rs  error_unexpected_wp_context_meta_variant_name_value.stderr  error_unexpected_wp_context_meta_variant_path.rs  error_unexpected_wp_context_meta_variant_path.stderr  error_unexpected_wp_context_punct.rs  error_unexpected_wp_context_token.rs  error_unexpected_wp_context_token.stderr  error_wp_contextual_field_without_wp_context.rs  error_wp_contextual_field_without_wp_context.stderr  error_wp_contextual_not_a_struct.rs  error_wp_contextual_not_a_struct.stderr  wp_contextual_field_with_inner_type.rs  wp_contextual_field_with_multiple_path_segments.rs  wp_contextual_field_with_multiple_path_segments_helper.rs  wp_contextual_field_with_multiple_segments.rs
wp_derive_request_builder/: Cargo.toml
wp_derive_request_builder/src/: generate.rs  lib.rs  outer_attr.rs  parse.rs  sparse_field_attr.rs  variant_attr.rs
wp_derive_request_builder/tests/: parser_tests.rs
wp_networking/: Cargo.toml  build.rs
wp_networking/src/: lib.rs  wp_networking.udl
wp_networking/tests/: test_common_err.rs  test_helpers.rs  test_plugins_err.rs  test_plugins_immut.rs  test_plugins_mut.rs  test_users.rs  test_users_err.rs  test_users_immut.rs  test_users_mut.rs  (+1 more)
(+286 files in other folders)
