[workspace]
members = [
  "wp_api",
  "wp_contextual",
  "wp_networking",
  "wp_uniffi_bindgen",
]
resolver = "2"

[workspace.dependencies]
base64 = "0.22"
http = "1.1"
rstest = "0.19"
rstest_reuse = "0.6.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
uniffi = "0.27.1"
