[workspace]
members = [
  "wp_api",
  "wp_contextual",
  "wp_derive_request_builder",
  "wp_uniffi_bindgen",
  "xcframework",
]
resolver = "2"

[workspace.dependencies]
base64 = "0.22"
convert_case = "0.6"
http = "1.1"
rstest = "0.21"
rstest_reuse = "0.7.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
uniffi = "0.28"
url = "2.5"
