[package]
name = "wordpress_api_request"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "wordpress_api_request"

[dependencies]
uniffi = { version = "0.25.0" }
wordpress_api = { path = "../wordpress_api" }

[build-dependencies]
uniffi = { version = "0.25.0", features = [ "build", "cli" ] }
