[package]
name = "wp_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "wp_api"

[dependencies]
async-trait = "0.1"
base64 = { workspace = true }
http = { workspace = true }
indoc = "2.0"
url = "2.5"
parse_link_header = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
wp_contextual = { path = "../wp_contextual" }

[dev-dependencies]
chrono = { version = "0.4" }
futures = "0.3"
reqwest = "0.12"
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = [ "chrono", "mysql", "runtime-tokio", "tls-native-tls" ]}
tokio = { version = "1.37", features = [ "full" ] }

[build-dependencies]
uniffi = { workspace = true , features = [ "build", "cli" ] }
