[package]
name = "wp_api_integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
wp_api = { path = "../wp_api", features = [ "integration-tests" ] }
sqlx = { workspace = true, features = [ "chrono", "mysql", "runtime-tokio", "tls-native-tls" ]}
tokio = { workspace = true, features = [ "full" ] }
url = { workspace = true }
uu_cp = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
paste = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serial_test = { workspace = true }
