[package]
name = "wp_api_integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
serde_json = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = [ "json", "cookies" ] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
url = { workspace = true }
wp_api = { path = "../wp_api", features = [ "integration-tests" ] }
wp_cli = { path = "../wp_cli" }

[dev-dependencies]
chrono = { workspace = true }
paste = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serial_test = { workspace = true }
