[package]
name = "wp_contextual"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all_tests.rs"

[dependencies]
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
syn = { workspace = true, features = ["extra-traits"] }
thiserror = { workspace = true }
uniffi = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true, features = ["diff"] }
