[package]
name = "wp_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.89", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
syn = { version = "2.0", features = ["extra-traits"] }
uniffi = { workspace = true }
