[package]
name = "wp_derive_request_builder"
version = "0.1.0"
edition = "2021"
autotests = false

[features]
generate_request_builder = []

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/parser_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
convert_case = "0.6"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0"
quote = "1.0"
serde = { workspace = true }
strum = "0.26"
strum_macros = "0.26"
syn = { version = "2.0", features = ["extra-traits"] }
thiserror = { workspace = true }
uniffi = { workspace = true }
