[package]
name = "wp_derive_request_builder"
version = "0.1.0"
edition = "2021"
autotests = false

[features]
generate_request_builder = []

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/parser_tests.rs"

[dependencies]
convert_case = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
strum = { workspace = true }
strum_macros = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }
thiserror = { workspace = true }
toml = { workspace = true }
uniffi = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
trybuild = { workspace = true, features = ["diff"] }
url = { workspace = true }
